force-app/main/objects/Additional_Scoped_days__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Scoped_Days__c</fullName>
        <label>Additional Scoped Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPS_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CPS Project</label>
        <referenceTo>ProjectObject__c</referenceTo>
        <relationshipLabel>Additional Days</relationshipLabel>
        <relationshipName>Additional_Scoped_days</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Chargeable__c</fullName>
        <label>Chargeable</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Mis-Scoped</fullName>
                </value>
                <value>
                    <fullName>Re-Scope/Change Requests</fullName>
                </value>
                <value>
                    <fullName>User Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Additional Scoped days</label>
    <nameField>
        <displayFormat>A-{000}</displayFormat>
        <label>Additional Scoped days Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Additional Scoped days</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>